# RP2040-AimeReader

./: CMakeLists.txt  README.md
include/: USB_Serial.h  aime_cmd.h  aime_reader.h
src/: USB_Serial.c  USB_Serial.cpp  aime_reader.c  aime_reader.cpp  main.c  main.cpp  usb_descriptors.c
src/PN532/: PN532_debug.h
src/PN532_HSU/: PN532_HSU.cpp
